Rework auth order
Signed-off-by: Simon Spielmann <simon.spielmann@gmx.de>